# KIV-UPP

./: .gitmodules
cv02/a/: main.cpp
cv02/b/: encrypted.txt  main.cpp
cv03/: CMakeLists.txt
cv03/01_mutex/: main.cpp
cv03/04_semaphore/: main.cpp  semaphore.h  ukol.cpp
cv04/: CMakeLists.txt
cv04/02_barrier/: main.cpp
cv04/03_atomic/: main.cpp
cv04/04_ctenar_pisar/: databaze.cpp  databaze.h  main.cpp
cv05/: CMakeLists.txt
cv05/04_homework/: main.cpp
cv07/: CMakeLists.txt
cv07/04_shared_memory/: konzument.c  producent.c
cv07/05_thread_pool/: main.c
cv08/: CMakeLists.txt
cv08/02_parallel_reduce/: main.cpp
cv08/03_barriers/: main.cpp
cv08/04_bonus/: main.cpp
cv09/: CMakeLists.txt  Vagrantfile
cv09/01_matrix_mul/: main.cpp
cv09/02_reduce/: main.cpp
cv09/03_image/: main.cpp
cv09/04_bonus/: CMakeLists.txt
cv09/04_bonus/src/: controller.h  fir_filter.h  main.cpp
cv10/: CMakeLists.txt
cv10/01_basics/: main.cpp
cv10/02_advanced/: main.cpp
cv10/03_kostra/: main.cpp
sem01/: .gitignore  CMakeLists.txt  README.md  justfile
sem01/src/: colors.hpp  config.cpp  config.hpp  data.hpp  deque.hpp  file_line.hpp  main.cpp  months.cpp  months.hpp  outliers.cpp  outliers.hpp  parsing.cpp  parsing.hpp  preprocessor.cpp  preprocessor.hpp  renderer.cpp  renderer.hpp  stats.cpp  stats.hpp  threadpool.cpp  threadpool.hpp  utils.cpp  utils.hpp
sem02/: .gitignore  CMakeLists.txt  Vagrantfile  justfile
sem02/src/: data.h  html.cpp  html.h  main.cpp  serialization.cpp  serialization.h  utils.cpp  utils.h
